Changes to FlightRecorder and JVM arguments
Remove -XX:+UnlockCommercialFeatures from FlightRecorder options unless
running on an Oracle JVM
Update the logging and GC logging options for JDK 8 and greater
Update the version for the jdg73 plugin to JDG 7.3.5